previous/prometheus/office-prometheus/monitoring/alert-manager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9093'
spec:
  selector:
    app: alertmanager
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9093
